--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-login></app-login>
+
 <router-outlet></router-outlet>
+
+
+<div>
+    <button class="btn-magnifique" (click)="goToLogin()">Login</button>
+    <button class="btn-magnifique" (click)="goToRegister()">Register</button>
+</div>
+  
+ 
+
+  
