--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <div>
     <button class="btn-magnifique" (click)="goToLogin()">Login</button>
     <button class="btn-magnifique" (click)="goToRegister()">Register</button>
+    <button class="btn-magnifique" (click)="logout()">Logout</button>
+
 </div>
-  
- 
 
   
