remplissage de l'information de l'utilisateur

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     <button class="btn-magnifique" (click)="goToLogin()">Login</button>
     <button class="btn-magnifique" (click)="goToRegister()">Register</button>
     <button class="btn-magnifique" (click)="logout()">Logout</button>
+    <button class="btn-magnifique" (click)="goToProfile()">Profile</button>
+
 
 </div>
 
