--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,35 @@
-<p>profile works!</p>
+<body>
+<div class="form-container">
+    <h2>Information of Client</h2>
+    <form class="client-form"   #clientForm="ngForm" >
+        <div class="form-group">
+        <label >Phone Number</label>
+        <input type="number" id="numéro"  name="numéro" [(ngModel)]="client.numerotelephone"  required>
+      </div>
+      <div class="form-group">
+        <label >Nationality</label>
+        <input type="text" id="nationality"  name="nationality" [(ngModel)]="client.nationality"  required>
+      </div>
+      <div class="form-group">
+        <label >Age</label>
+        <input type="number" id="age" name="age" [(ngModel)]="client.age"  required>
+      </div>
+      <div class="form-group">
+        <label>Date of Birth</label>
+        <input type="date" id="birthdate" name="birthdate" [(ngModel)]="client.birthdate"  required>
+      </div>
+      <div class="form-group">
+        <label >City</label>
+        <input type="text" id="ville" name="ville" [(ngModel)]="client.ville"  required>
+      </div>
+      <div class="form-group">
+        <label >Shipping Address</label>
+        <input type="text" id="adresselivraison" [(ngModel)]="client.adresselivraison" name="adresselivraison" required>
+      </div>
+      
+  
+      
+      <button type="submit" (click)="onSubmit()"  class="btn btn-primary">Save</button>
+    </form>
+  </div>
+</body>
