récupération des infos de user et profil sur meme page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
     <button class="btn-magnifique" (click)="goToLogin()">Login</button>
     <button class="btn-magnifique" (click)="goToRegister()">Register</button>
     <button class="btn-magnifique" (click)="logout()">Logout</button>
-    <button class="btn-magnifique" (click)="goToProfile()">Profile</button>
+    <button class="btn-magnifique" (click)="goToProfile()">Information</button>
+    <button class="btn-magnifique" (click)="goToUser()">UserDetail</button>
+
 
 
 </div>
