--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
       <div class="login-box">
           <h2>Login</h2>
           <!-- #loginForm="ngForm" crée une référence locale du formulaire qui vous permet 
-          de manipuler et de valider facilement le formulaire directement depuis le template Angula-->
+          de manipuler et de valider facilement le formulaire directement depuis le template Angular-->
           <form #loginForm="ngForm" >
               <div class="input-box">
                   <input 
