added the routing for the cart module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,13 @@
     <button class="btn-magnifique" (click)="logout()">Logout</button>
     <button class="btn-magnifique" (click)="goToProfile()">Information</button>
     <button class="btn-magnifique" (click)="goToUser()">UserDetail</button>
+    <button class="btn-magnifique" (click)="goToCart()">Cart</button>
+
 
 
 </div>
 
 <router-outlet></router-outlet>
-<app-cart></app-cart>
 
 
 <app-footer></app-footer>
