--- a/src/app/carts/cart/cart.component.html
+++ b/src/app/carts/cart/cart.component.html
@@ -17,11 +17,11 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- <tr *ngFor= "let item of cartProducts">
+                                <tr>
                                     <td class="cart__product__item">
-                                        <img src="{{item.item.image}}" alt="">
+                                        <img src="assets/img/shop-cart/cp-1.jpg" alt="">
                                         <div class="cart__product__item__title">
-                                            <h6>{{item.item.title}}</h6>
+                                            <h6>Chain bucket bag</h6>
                                             <div class="rating">
                                                 <i class="bi bi-star"></i>
                                                 <i class="bi bi-star"></i>
@@ -31,13 +31,13 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="cart__price">{{item.item.price}}</td>
+                                    <td class="cart__price">$ 150.0</td>
                                     <td class="cart__quantity">
                                         <div class="quantity">
                                             <button class="btn btn-dark">
                                                 <i class="bi bi-plus"></i>
                                             </button>
-                                            <input class="form-control" type="number"  min="1">
+                                            <input class="form-control" type="number" min="1">
                                             <button class="btn btn-dark">
                                                 <i class="bi bi-dash"></i>
                                             </button>
@@ -45,7 +45,7 @@
                                     </td>
                                     <td class="cart__total">$ 300.0</td>
                                     <td class="cart__close"><span class="bi bi-x-lg"></span></td>
-                                </tr> -->
+                                </tr>
                                 <tr>
                                     <td class="cart__product__item">
                                         <img src="assets/img/shop-cart/cp-2.jpg" alt="">
