added the cart functionalities to the front

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,42 +4,42 @@
         <div class="row">
             <div class="col-xl-3 col-lg-2">
                 <div class="header__logo">
-                    <a routerLink="/home"><img src="assets/img/logo.png" alt="Logo"></a>
+                    <a href="/home"><img src="assets/img/logo.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a routerLink="/home">Home</a></li>
-                        <li><a routerLink="/category/womens">Women’s</a></li>
-                        <li><a routerLink="/category/mens">Men’s</a></li>
-                        <li><a routerLink="/shop">Shop</a></li>
+                        <li class="active"><a href="/home">Home</a></li>
+                        <li><a href="/category/womens">Women’s</a></li>
+                        <li><a href="/category/mens">Men’s</a></li>
+                        <li><a href="/shop">Shop</a></li>
                         <li class="dropdown">
                             <a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a routerLink="/product-details">Product Details</a></li>
-                                <li><a routerLink="/cart">Shop Cart</a></li>
-                                <li><a routerLink="/checkout">Checkout</a></li>
-                                <li><a routerLink="/blog-details">Blog Details</a></li>
+                                <li><a href="/product-details">Product Details</a></li>
+                                <li><a href="/cart">Shop Cart</a></li>
+                                <li><a href="/checkout">Checkout</a></li>
+                                <li><a href="/blog-details">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li><a routerLink="/blog">Blog</a></li>
-                        <li><a routerLink="/contact">Contact</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-lg-3">
                 <div class="header__right">
                     <div class="header__right__auth">
-                        <a routerLink="/login">Login</a>
-                        <a routerLink="/register">Register</a>
+                        <a href="/login">Login</a>
+                        <a href="/register">Register</a>
                     </div>
                     <ul class="header__right__widget">
                         <li><span class="bi bi-search"></span></li>
-                        <li><a routerLink="/wishlist"><span class="bi bi-heart"></span>
+                        <li><a href="/wishlist"><span class="bi bi-heart"></span>
                             <div class="tip">2</div>
                         </a></li>
-                        <li><a routerLink="/cart" routerLinkActive="active"  ><span class="bi bi-bag"></span>
+                        <li><a href="/cart"  ><span class="bi bi-bag"></span>
                             <div class="tip">2</div>
                         </a></li>
                     </ul>
