--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -334,6 +334,10 @@ ol {
 	padding: 30px 0 27px;
 }
 
+.header__menu a{
+  text-decoration: none;
+}
+
 .header__menu ul li {
 	list-style: none;
 	display: inline-block;
@@ -2188,7 +2192,7 @@ ol {
 	text-align: right;
 }
 
-.cart__btn a {
+.cart__btn a  {
 	font-size: 14px;
 	color: #111111;
 	font-weight: 600;
@@ -2202,6 +2206,23 @@ ol {
 	color: #ca1515;
 	font-size: 14px;
 	margin-right: 5px;
+}
+
+.cart__btn button {
+  font-size: 14px;
+  border: none;
+  color: #111111;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 14px 30px 12px;
+  background: #f5f5f5;
+}
+
+.cart__btn button span {
+  color: #ca1515;
+  font-size: 14px;
+  margin-right: 5px;
 }
 
 .discount__content h6 {
