--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,5 +1,25 @@
 <body>
-<p>User Information</p>
+    <div>
+        <h2>Your Order</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Product</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tr *ngFor="let product of selectedProducts">
+            <td>{{ product.name }}</td>
+            <td>{{product.quantity}}</td>
+            <td>{{product.price}}</td>
+            <td>{{product.quantity * product.price}} DT</td>
+        </tr>
+    </table>
+    <h4>Total : {{ calculateTotal() }} DT</h4>
+    </div>
+<h2>User Information</h2>
 <div class="user-form">
 <form [formGroup] = "OrderForm" (ngSubmit)="submitOrder()">
 <label>
