--- a/src/app/Carts/cart/cart.component.html
+++ b/src/app/Carts/cart/cart.component.html
@@ -1,18 +1,18 @@
+<!-- Shop Cart Section Begin -->
+<section class="shop-cart spad">
+    <div class="container">
+        <!-- Success Alert -->
+        <div class="alert alert-success" role="alert" *ngIf="success">
+            <strong>Well done!</strong> Your Order is Successfully Sent
+        </div>
 
+        <!-- Empty Cart Message -->
+        <div *ngIf="cartProducts.length === 0" class="empty-cart">
+            <p>Your cart is empty.</p>
+        </div>
 
-
-
-
-
-
-
-
-    <!-- Shop Cart Section Begin -->
-    <section class="shop-cart spad">
-
-        <div class="container">
-                <div class="alert alert-success" role="alert" *ngIf="success"><strong>Well done !</strong> Your Order is Successfully Sent </div>
-
+        <!-- Cart Table -->
+        <div *ngIf="cartProducts.length > 0">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shop__cart__table">
@@ -29,21 +29,18 @@
                             <tbody>
                                 <tr *ngFor="let item of cartProducts; let index = index">
                                     <td class="cart__product__item">
-                                        <img src="{{item.product.image}}" alt="">
+                                        <img src="{{ item.product.image }}" alt="">
                                         <div class="cart__product__item__title">
-                                            <h6>{{item.product.title}}</h6>
+                                            <h6>{{ item.product.title }}</h6>
                                         </div>
                                     </td>
-                                    <td class="cart__price"> $ {{item.product.price | number: '1.0-3' }}</td>
+                                    <td class="cart__price">$ {{ item.product.price | number: '1.0-3' }}</td>
                                     <td class="cart__quantity">
                                         <div class="quantity">
-
-                                             <button class="btn btn-dark" (click)="minusAmount(index)">
+                                            <button class="btn btn-dark" (click)="minusAmount(index)">
                                                 <i class="bi bi-dash"></i>
                                             </button>
-
-                                            <!--<input formControlName="quantity" type="number" min="1">-->
-                                              <input
+                                            <input
                                                 type="number"
                                                 size="4"
                                                 class="input-text qty text"
@@ -53,23 +50,17 @@
                                                 name="quantity"
                                                 min="1"
                                                 step="1"
-                                              />
-
-
-
-
-
+                                            />
                                             <button class="btn btn-dark" (click)="addAmount(index)">
                                                 <i class="bi bi-plus"></i>
                                             </button>
                                         </div>
                                     </td>
-                                    <td class="cart__total">{{item.product.price * item.quantity | number: '1.0-3' }}</td>
+                                    <td class="cart__total">{{ item.product.price * item.quantity | number: '1.0-3' }}</td>
                                     <td class="cart__close">
-                                      <span class="bi bi-x-lg" (click)="deleteProduct(index)" ></span>
+                                        <span class="bi bi-x-lg" (click)="deleteProduct(index)"></span>
                                     </td>
                                 </tr>
-
                             </tbody>
                         </table>
                     </div>
@@ -83,22 +74,22 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="cart__btn update__btn">
-                        <button (click)="clearCart()" ><span class="bi bi-trash" ></span> Clear cart</button>
+                        <button (click)="clearCart()"><span class="bi bi-trash"></span> Clear cart</button>
                     </div>
                 </div>
             </div>
             <div class="row">
-
                 <div class="col-lg-4 ">
                     <div class="cart__total__procced">
                         <h6>Cart total</h6>
                         <ul>
-                            <li>Total <span>$ {{total | number: '1.3-3' }}</span></li>
+                            <li>Total <span>$ {{ total | number: '1.3-3' }}</span></li>
                         </ul>
-                        <button class="primary-btn"  (click)="addCart()" >Proceed to checkout </button>
+                        <button class="primary-btn" (click)="checkout()">Proceed to checkout</button>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Shop Cart Section End -->
+    </div>
+</section>
+<!-- Shop Cart Section End -->
