--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,13 +4,13 @@
         <div class="row">
             <div class="col-xl-3 col-lg-2">
                 <div class="header__logo">
-                    <a href="/home"><img src="assets/img/logo.png" alt="Logo"></a>
+                    <a href="/"><img src="assets/img/logo.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="/home">Home</a></li>
+                        <li class="active"><a href="/">Home</a></li>
                         <li><a href="/category/womens">Women’s</a></li>
                         <li><a href="/category/mens">Men’s</a></li>
                         <li><a href="/shop">Shop</a></li>
