relier page d'accueil avec login, register

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -24,15 +24,16 @@
                             </ul>
                         </li>
                         <li><a href="/blog">Blog</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/profile">Contact</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-lg-3">
                 <div class="header__right">
                     <div class="header__right__auth">
-                        <a href="/login">Login</a>
-                        <a href="/register">Register</a>
+                        <a href="/login">Login</a>  <a href="/register">Register</a>
+                        <a href="/login">Logout</a>
+
                     </div>
                     <ul class="header__right__widget">
                         <li><span class="bi bi-search"></span></li>
