fixed the header links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
 
 
 
-<div>
+<!-- <div>
     <button class="btn-magnifique" (click)="goToLogin()">Login</button>
     <button class="btn-magnifique" (click)="goToRegister()">Register</button>
     <button class="btn-magnifique" (click)="goToCatalogue()">catalogue</button>
@@ -32,10 +32,7 @@
     <button class="btn-magnifique" (click)="goToUser()">UserDetail</button>
     <button class="btn-magnifique" (click)="goToCart()">Cart</button>
 
-
-
-
-</div>
+</div> -->
 
 
 
