--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,44 +4,50 @@
         <div class="row">
             <div class="col-xl-3 col-lg-2">
                 <div class="header__logo">
-                    <a href="/"><img src="assets/img/logo.png" alt="Logo"></a>
+                    <a routerLink="/"><img src="assets/img/logo.png" alt="Logo"></a>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/category/womens">Women’s</a></li>
-                        <li><a href="/category/mens">Men’s</a></li>
-                        <li><a href="/shop">Shop</a></li>
+                        <li class="active"><a routerLink="/">Home</a></li>
+                        <li><a routerLink="/catalogue">Catalogue</a></li>
+                        <li><a routerLink="/shop">...</a></li>
                         <li class="dropdown">
                             <a href="#">Pages</a>
                             <ul class="dropdown">
-                                <li><a href="/product-details">Product Details</a></li>
-                                <li><a href="/cart">Shop Cart</a></li>
-                                <li><a href="/checkout">Checkout</a></li>
-                                <li><a href="/blog-details">Blog Details</a></li>
+                                <li><a routerLink="/product-details">Product Details</a></li>
+                                <li><a routerLink="/cart">Shop Cart</a></li>
+                                <li><a routerLink="/checkout">Checkout</a></li>
+                                <li><a routerLink="/blog-details">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li><a href="/blog">Blog</a></li>
-                        <li><a href="/contact">Contact</a></li>
+
+                        <li class="dropdown">
+                            <a href="#">Account</a>
+                            <ul class="dropdown">
+                                <li><a routerLink="/profile">Profile Info</a></li>
+                                <li><a routerLink="/user/:id">User Details</a></li>
+                                <li><a routerLink="/login">Logout</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
             </div>
             <div class="col-lg-3">
                 <div class="header__right">
                     <div class="header__right__auth">
-                        <a href="/login">Login</a>
-                        <a href="/register">Register</a>
+                        <a routerLink="/login">Login</a>
+                        <a routerLink="/register">Register</a>
                     </div>
                     <ul class="header__right__widget">
-                        <li><span class="bi bi-search"></span></li>
-                        <li><a href="/wishlist"><span class="bi bi-heart"></span>
+                        <li><a routerLink="/cart"  ><span class="bi bi-bag"></span>
                             <div class="tip">2</div>
                         </a></li>
-                        <li><a href="/cart"  ><span class="bi bi-bag"></span>
+                        <li><a routerLink="/checkout"><span class="bi bi-wallet2"></span>
                             <div class="tip">2</div>
                         </a></li>
+
                     </ul>
                 </div>
             </div>
