ajout de logout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,8 @@
                             <ul class="dropdown">
                                 <li><a routerLink="/profile">Profile Info</a></li>
                                 <li><a routerLink="/user/:id">User Details</a></li>
-                                <li><a routerLink="/login">Logout</a></li>
+                                <li><a routerLink="#" (click)="onLogout()">Logout</a></li>
+
                             </ul>
                         </li>
                     </ul>
