--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,10 +42,10 @@
                     </div>
                     <ul class="header__right__widget">
                         <li><a routerLink="/cart"  ><span class="bi bi-bag"></span>
-                            <div class="tip">2</div>
+                            <!-- <div class="tip">2</div> -->
                         </a></li>
                         <li><a routerLink="/checkout"><span class="bi bi-wallet2"></span>
-                            <div class="tip">2</div>
+                            <!-- <div class="tip">2</div> -->
                         </a></li>
 
                     </ul>
