--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,7 +45,7 @@
                         <li><a routerLink="/cart"  ><span class="bi bi-bag"></span>
                             <!-- <div class="tip">2</div> -->
                         </a></li>
-                        <li><a routerLink="/checkout"><span class="bi bi-wallet2"></span>
+                        <li><a routerLink="/order"><span class="bi bi-wallet2"></span>
                             <!-- <div class="tip">2</div> -->
                         </a></li>
 
