--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,9 +43,13 @@
                     </div>
                     <ul class="header__right__widget">
                         <li><a routerLink="/cart"  ><span class="bi bi-bag"></span>
-                            <!-- <div class="tip">2</div> -->
+                            <div class="tip">{{ cartItemCount }}</div>
+                            <span class="hover-text">Your Cart</span>
+
                         </a></li>
                         <li><a routerLink="/order"><span class="bi bi-wallet2"></span>
+                        <span class="hover-text">Order Now</span>
+
                             <!-- <div class="tip">2</div> -->
                         </a></li>
 
