--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -788,7 +788,7 @@
 
       <!--
         - #NEWSLETTER
-      -->
+
 
       <section class="section newsletter">
         <div class="container">
@@ -820,7 +820,7 @@
           </div>
 
         </div>
-      </section>
+      </section>-->
 
     </article>
   </main>
