--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,8 +8,7 @@
                     <div class="footer__logo">
                         <a href="./index.html"><img src="assets/img/logo.png" alt=""></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    cilisis.</p>
+                    <p>Trendora – Where style meets trend, shop the latest fashion effortlessly!</p>
                     <div class="footer__payment">
                         <a href="#"><img src="assets/img/payment/payment-1.png" alt=""></a>
                         <a href="#"><img src="assets/img/payment/payment-2.png" alt=""></a>
@@ -23,10 +22,10 @@
                 <div class="footer__widget">
                     <h6>Quick links</h6>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li ><a href="#">About</a></li>
+                        <li ><a routerLink="/catalogue">Catalogue</a></li>
+                        <li><a routerLink="/product-details">Product Details </a></li>
+                        <li><a href="#">Shop Cart</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,10 +33,10 @@
                 <div class="footer__widget">
                     <h6>Account</h6>
                     <ul>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Orders Tracking</a></li>
-                        <li><a href="#">Checkout</a></li>
-                        <li><a href="#">Wishlist</a></li>
+                        <li><a routerLink="/login">Login</a></li>
+                        <li><a routerLink="/register">Register</a></li>
+                        <li><a routerLink="/profile">Profile Info</a></li>
+                        <li><a routerLink="/user/:id">User Details</a></li>
                     </ul>
                 </div>
             </div>
@@ -69,3 +68,5 @@
     </div>
 </footer>
 <!-- Footer Section End -->
+
+
