--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
 
             <h2 class="h1 hero-title">Unrivalled Fashion House</h2>
 
-            <button class="btn btn-primary">Shop Now</button>
+            <button class="btn btn-primary" routerLink="/catalogue">Shop Now</button>
 
           </div>
 
