--- a/src/app/review-modal/review-modal.component.html
+++ b/src/app/review-modal/review-modal.component.html
@@ -1,1 +1,11 @@
-<p>review-modal works!</p>
+<h1 mat-dialog-title>Reviews</h1>
+<div mat-dialog-content>
+  <div *ngFor="let review of data.reviews">
+    <p>{{ review.content }}</p>
+    <small>by {{ review.author }}</small>
+    <hr>
+  </div>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onClose()">Close</button>
+</div>
