--- a/src/app/Products/catalogue/catalogue.component.html
+++ b/src/app/Products/catalogue/catalogue.component.html
@@ -1,98 +1,119 @@
 <div class="catalogue-page">
-<button class="button-info" (click)="openFormPopup1()">add Product</button>
+  <button class="button-info" (click)="openFormPopup1()">Add Product</button>
 
+  <dx-data-grid
+    [dataSource]="products"
+    [showBorders]="true"
+    keyExpr="id"
+    [allowColumnReordering]="true"
+    [paging]="{ enabled: true, pageSize: 5 }"
+    [pager]="{
+      visible: true,
+      displayMode: 'full',
+      showPageSizeSelector: false,
+      showNavigationButtons: true,
+      showInfo: false
+    }"
+    [searchPanel]="{ visible: true, width: 240, placeholder: 'Search...' }"
+  >
+    <dxi-column dataField="id" caption="ID" cellTemplate="idTemplate"></dxi-column>
+    <dxi-column dataField="title" caption="Title" cellTemplate="titleTemplate"></dxi-column>
+    <dxi-column dataField="price" caption="Price" cellTemplate="priceTemplate"></dxi-column>
+    <dxi-column dataField="category" caption="Category" cellTemplate="categoryTemplate"></dxi-column>
+    <dxi-column dataField="description" caption="Description" cellTemplate="descriptionTemplate"></dxi-column>
+    <dxi-column dataField="rating" caption="Rating" cellTemplate="ratingTemplate"></dxi-column>
+    <dxi-column dataField="image" caption="Image" cellTemplate="imageTemplate"></dxi-column>
 
+    <!-- Custom Templates -->
+    <div *dxTemplate="let option of 'idTemplate'">
+      {{ option.data.id }}
+    </div>
 
-<dx-data-grid
-  [dataSource]="products"
-  [showBorders]="true"
-  keyExpr="id"
-  [allowColumnReordering]="true"
-  [paging]="{ enabled: true, pageSize: 5 }"
-  [pager]="{
-   visible: true,
-    displayMode: 'full',
-    showPageSizeSelector: false,
-    showNavigationButtons: true,
-    showInfo: false}"
-  [searchPanel]="{ visible: true, width: 240, placeholder: 'Search...' }">
+    <div *dxTemplate="let option of 'titleTemplate'">
+      {{ option.data.title }}
+    </div>
 
+    <div *dxTemplate="let option of 'priceTemplate'">
+      {{ option.data.price }}
+    </div>
 
-  <dxi-column dataField="id" caption="id" cellTemplate="idTemplate"></dxi-column>
-  <dxi-column dataField="title" caption="Title" cellTemplate="titleTemplate"></dxi-column>
-  <dxi-column dataField="price" caption="Price" cellTemplate="priceTemplate"></dxi-column>
-  <dxi-column dataField="category" caption="Category" cellTemplate="categoryTemplate"></dxi-column>
-  <dxi-column dataField="description" caption="Description"cellTemplate="descriptionTemplate"></dxi-column>
-  <dxi-column dataField="rating" caption="Rating" cellTemplate="ratingTemplate"></dxi-column>
-  <dxi-column dataField="image" caption="Image" cellTemplate="imageTemplate"></dxi-column>
+    <div *dxTemplate="let option of 'categoryTemplate'">
+      {{ option.data.category }}
+    </div>
 
+    <div *dxTemplate="let option of 'descriptionTemplate'">
+      {{ option.data.description }}
+    </div>
 
+    <div *dxTemplate="let option of 'ratingTemplate'">
+      {{ option.data.rating.rate }} / {{ option.data.rating.count }}
+    </div>
 
-  <div *dxTemplate="let option of 'idTemplate'">
-    {{ option.data.id }}
-  </div>
+    <div *dxTemplate="let option of 'imageTemplate'">
+      <img [src]="option.data.image" alt="{{ option.data.title }}" width="50">
+    </div>
 
-  <div *dxTemplate="let option of 'titleTemplate'">
-    {{ option.data.title }}
-  </div>
+    <dxi-column caption="Actions" cellTemplate="actionTemplate"></dxi-column>
+    <div *dxTemplate="let option of 'actionTemplate'">
+      <button class="button-info" (click)="showInfo(option.data)">More Info</button>
+      <button class="button-info" (click)="openFormPopup(option.data)">Edit Product</button>
+      <button class="button-info" (click)="addToCart(option.data)">Add To Cart</button>
+      <button class="button-info" (click)="openPopup(option.data)">View Details</button>
+      <button class="button-info" (click)="openReviewPopup(option.data)">View Reviews</button>
+    </div>
 
-  <div *dxTemplate="let option of 'priceTemplate'">
-    {{option.data.price }}
-  </div>
+    <dxo-selection mode="multiple"></dxo-selection>
+    <dxo-grouping [autoExpandAll]="true"></dxo-grouping>
+  </dx-data-grid>
 
-  <div *dxTemplate="let option of 'categoryTemplate'">
-    {{ option.data.category }}
-  </div>
+  <!-- Product Popup -->
+  <dx-popup
+    [(visible)]="popupVisible"
+    [showCloseButton]="true"
+    [width]="600"
+    [height]="500"
+  >
+    <div *ngIf="currentProduct">
+      <p>ID: {{ currentProduct.id }}</p>
+      <p>Title: {{ currentProduct.title }}</p>
+      <p>Price: {{ currentProduct.price }}</p>
+      <p>Category: {{ currentProduct.category }}</p>
+      <p>Description: {{ currentProduct.description }}</p>
+      <p>Rating: {{ currentProduct.rating.rate }} ({{ currentProduct.rating.count }} votes)</p>
+      <img [src]="currentProduct.image" alt="{{ currentProduct.title }}" class="popup-image">
+      <button class="close-button" (click)="closePopup()">Close</button>
+      <button class="button-info" (click)="openReviewPopup(currentProduct)">View Reviews</button>
+    </div>
+  </dx-popup>
 
-  <div *dxTemplate="let option of 'descriptionTemplate'">
-    {{ option.data.description }}
-  </div>
+  <!-- Review Popup -->
+  <dx-popup [(visible)]="reviewPopupVisible" [showCloseButton]="true" [width]="600" [height]="500">
+    <div *ngIf="selectedProduct">
+      <h2>{{ selectedProduct.title }} Reviews</h2>
+      <div *ngFor="let review of selectedProductReviews">
+        <p>{{ review.content }}</p>
+        <small>By {{ review.author }}</small>
+      </div>
+      <button class="close-button" (click)="closeReviewPopup()">Close</button>
+    </div>
+  </dx-popup>
 
-  <div *dxTemplate="let option of 'ratingTemplate'">
-    {{ option.data.rating.rate}} / {{ option.data.rating.count}}
-  </div>
+  <app-product-popup
+    [product]="currentProduct"
+    [visible]="popupVisible"
+    (close)="closePopup()"
+  ></app-product-popup>
 
-
- <div *dxTemplate="let option of 'imageTemplate'">
-    <img [src]="option.data.image" alt="{{option.data.title}}" width="50">
-  </div>
-
-  <dxi-column
-     caption="Actions"
-     cellTemplate="actionTemplate">
-  </dxi-column>
-  <div *dxTemplate="let option of 'actionTemplate'">
-  <button class="button-info" (click)="showInfo(option.data)">More Info</button>
-  <button class="button-info" (click)="openFormPopup(option.data)">Edit Product</button>
-  <button class="button-info" (click)="addToCart(option.data)" >Add To Cart</button>
-
-
-  </div>
-  <dxo-selection mode="multiple"></dxo-selection>
-  <dxo-grouping [autoExpandAll]="true"></dxo-grouping>
-
-
-
-
-</dx-data-grid>
-<app-product-popup
-  [product]="currentProduct"
-  [visible]="popupVisible"
-  (close)="closePopup()">
-</app-product-popup>
-<app-form-popup
-  [visible]="formPopupVisible"
-  [product]="selectedProductId"
-  [isEditMode]="isEditMode"
-  (close)="closeFormPopup()">
-</app-form-popup>
+  <app-form-popup
+    [visible]="formPopupVisible"
+    [product]="selectedProductId"
+    [isEditMode]="isEditMode"
+    (close)="closeFormPopup()"
+  ></app-form-popup>
 </div>
-
 
 <!--<div class="catalogue-page">
 <button class="button-info" (click)="openFormPopup1()">add Product</button>
-
-
 
 <dx-data-grid
   [dataSource]="customers"
@@ -108,7 +129,6 @@
     showInfo: false}"
   [searchPanel]="{ visible: true, width: 240, placeholder: 'Search...' }">
 
-
   <dxi-column dataField="id" caption="id" cellTemplate="idTemplate"></dxi-column>
   <dxi-column dataField="title" caption="Title" cellTemplate="titleTemplate"></dxi-column>
   <dxi-column dataField="price" caption="Price" cellTemplate="priceTemplate"></dxi-column>
@@ -116,8 +136,6 @@
   <dxi-column dataField="description" caption="Description"cellTemplate="descriptionTemplate"></dxi-column>
   <dxi-column dataField="rating" caption="Rating" cellTemplate="ratingTemplate"></dxi-column>
   <dxi-column dataField="image" caption="Image" cellTemplate="imageTemplate"></dxi-column>
-
-
 
   <div *dxTemplate="let option of 'idTemplate'">
     {{ option.data.id }}
@@ -143,7 +161,6 @@
     {{ option.data.rating.rate}} / {{ option.data.rating.count}}
   </div>
 
-
  <div *dxTemplate="let option of 'imageTemplate'">
     <img [src]="option.data.image" alt="{{option.data.title}}" width="50">
   </div>
@@ -159,9 +176,6 @@
   </div>
   <dxo-selection mode="multiple"></dxo-selection>
   <dxo-grouping [autoExpandAll]="true"></dxo-grouping>
-
-
-
 
 </dx-data-grid>
 <app-customer-popup
